feat: Implement configurable time-based rate limiting
🚀 RATE LIMITING IMPROVEMENTS:

Core Features:
- Replace hard 5-query limit with sliding window rate limiting (5 queries/10s default)
- Configurable via environment variables (RATE_LIMIT_MAX_QUERIES, RATE_LIMIT_TIME_WINDOW_SECONDS, RATE_LIMIT_ENABLED)
- Automatic query expiry - old queries drop off as time passes
- Real-time status tracking with remaining quota and time to reset

New Tools:
- starfish_get_rate_limit_status: Check current usage and remaining queries
- starfish_reset_rate_limit: Manual reset for new tasks (replaces starfish_reset_query_count)

Configuration:
- Added RateLimiter class with sliding window implementation
- Integrated with StarfishConfig for runtime configuration
- Backward compatible - defaults maintain reasonable limits
- Can be disabled entirely for testing/development

Testing & Documentation:
- Comprehensive test suite for all rate limiting scenarios
- Updated tool descriptions with new guardrail information
- Enhanced prompt.py guidance for time-based limits
- Demo script showing rate limiting behavior
- Updated environment variable examples

This makes the system much more practical while still preventing
inefficient usage patterns. Users can make reasonable bursts of
queries without being blocked unnecessarily.

--- a/env.example
+++ b/env.example
@@ -28,3 +28,8 @@ TLS_MIN_VERSION=1.2
 
 # Logging
 LOG_LEVEL=INFO
+
+# Rate Limiting Configuration
+RATE_LIMIT_MAX_QUERIES=5
+RATE_LIMIT_TIME_WINDOW_SECONDS=10
+RATE_LIMIT_ENABLED=true
